duniverse/menhirLib.20200211/test/static/bad/forbidden-pos.exp
File "forbidden-pos.mly", line 12, characters 16-28:
Error: j refers to a nonexistent symbol.
